Reset page margin and padding. Fixed spacing between logos

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 :root {
     --bg-color: hsl(0, 0%, 90%);
     --text-img-color: hsl(0, 0%, 0%);
@@ -18,7 +24,6 @@ h1 {
     font-size: calc(6vw + 1rem);
     font-weight: 700;
     font-style: italic;
-    line-height: 0px;
 }
 
 p {
@@ -35,13 +40,15 @@ p {
 }
 
 .hero-left {
+    /* display: flex; */
     padding-right: 5%;
 }
 
 .icon-imgs {
     display: flex;
-    justify-content: left;
+    justify-content: space-between;
     align-items: center;
+    padding-top: 2rem;
 }
 
 
@@ -51,11 +58,7 @@ p {
 }
 
 .icon-img {
-    width: calc(5vw + 0.05rem);
-}
-
-.not-final {
-    padding-right: 10%;
+    width: calc(4vw + 0.05rem);
 }
 
 #palette {
@@ -69,16 +72,19 @@ p {
 
     .logo {
         width: calc(25vw + 5rem);
-        margin-bottom: 10%;
+        padding-bottom: 10%;
     }
 
     .hero-left {
         order: 2;
-        padding-right: 0;
+    }
+
+    .icon-imgs {
+        padding-top: 1.5rem;
     }
 
     .icon-img {
-        width: calc(10vw + 0.05rem);
+        width: calc(5vw + 0.05rem);
     }
 
     h1 {
